# plan-a

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  PLANNING.md  README.md  pyproject.toml
notebook/: README.md  cc_analysis.ipynb
python/src/plan_a/: __main__.py  cc_analysis.py  cc_etl.py
python/src/plan_a/budet_scratch/: bank_etl.py  recon.py
